--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 		    <artifactId>bcprov-jdk15on</artifactId>
 		    <version>1.65</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
 						
 	</dependencies>
 
